# numcompute-stream

./: .gitignore  README.md  pyproject.toml  video_demo_link.txt
benchmark/: benchmark_streaming.py
demo/: employees.csv  quickstart.ipynb  stream_demo.ipynb
numcompute/: benchmarking.py  optim.py  preprocessing.py  stats.py  utils.py
numcompute-stream/: __init__.py  io.py  metrics.py  optim.py  pipeline.py  preprocessing.py  rank.py  sort_search.py  stats.py  tree.py
numcompute.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
numcompute_stream/: ensemble.py  io.py  metrics.py  pipeline.py  rank.py  sort_search.py  stats.py  stream.py  tree.py  utils.py  visualise.py
tests/: test_ensemble.py  test_io.py  test_metrics.py  test_optim.py  test_preprocessing.py  test_rank.py  test_sort_search.py  test_stats.py  test_stream.py  test_streaming.py  test_tree.py  test_utils.py  test_visualise.py
