[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "numcompute"
version = "0.1.0"
description = "NumCompute ML utilities"
authors = [
    {name = "Benzamin Yasir"},
    {name = "Risat Rahaman"},
    {name = "Saadman Sakib"},
    {name = "Mazaharul Islam Rakib"}
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = ["pytest"]