[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "numcompute_stream"
version = "0.1.0"
description = "NumCompute-Stream: A Modularised Ensemble Tree-based Streaming Machine Learning Framework"
authors = [
    {name = "Saadman Sakib"}
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = ["pytest"]